--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "motra---ai-luxury-suv-platform",
+  "name": "motra---luxury-suv-cross-border-platform",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.34.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
